# soapfish

./: .gitignore  .hgignore  .lgtm.yml  .mailmap  .nose2.cfg  .readthedocs.yml  .travis.yml  AUTHORS  AUTHORS.md  AUTHORS.txt  CHANGES  CHANGES.md  CHANGES.txt  CONTRIBUTING.md  CONTRIBUTING.txt  INFORMATION.md  LICENSE  LICENSE.txt  LIMITATIONS.md  LIMITATIONS.txt  MANIFEST.in  Makefile  README  README.md  README.rst  TODO  TODO.md  dev_requirements.txt  pyproject.toml  requirements-jenkins.txt  requirements-sphinx.txt  requirements-tests.txt  requirements.py  requirements.txt  setup.cfg  setup.py  soap2_test.py  tox.ini
.github/workflows/: codeql.yml  lint.yml  test.yml
doc/: Makefile  conf.py  index.rst  make.bat  middlewares.rst  tutorial.rst  tutorial.txt
doc/source/: Authors.rst  Introduction.rst  Issues.rst  TODO.rst  Tutorial.rst  conf.py  index.rst  modules.rst  soapbox.rst
docs/: conf.py  contributing.rst  index.rst  limitations.rst  middlewares.rst  specifications.rst  sslcontext.rst  todo.rst  tutorial.rst  tutorial.txt
examples/: client.py  flask_stock.py  ops.wsdl  ops.xsd  xml_complex_types.py  xml_parsing.py  xml_rendering.py
examples/stock/: gen.py  manage.py  settings.py  urls.py
examples/stock/web/: views.py
jenkins/: build.sh  publish_pypi.sh  test.sh
soapbox/: __init__.py  compat.py  consts.py  core.py  iso8601.py  middlewares.py  namespaces.py  py2wsdl.py  py2xsd.py  settings.py  soap.py  soap11.py  soap12.py  soap_dispatch.py  utils.py  wsa.py  wsdl.py  wsdl11.py  wsdl12.py  wsdl2py.py  xsd.py  xsd2py.py  xsdspec.py
soapbox/ext/django/: dispatch.py
soapbox/lib/: attribute_dict.py  pythonic_testcase.py  result.py
soapbox/templates/: wsdl  xsd
soapfish/: __init__.py  compat.py  core.py  django_.py  flask_.py  middlewares.py  namespaces.py  py2wsdl.py  py2xsd.py  settings.py  soap.py  soap11.py  soap12.py  soap_dispatch.py  testutil.py  utils.py  wsa.py  wsdl.py  wsdl11.py  wsdl12.py  wsdl2py.py  xsd.py  xsd2py.py  xsd_types.py  xsdspec.py
soapfish/ext/django/: dispatch.py
soapfish/lib/: attribute_dict.py
soapfish/templates/: lib  lib.jinja2  wsdl  wsdl.jinja2  xsd  xsd.jinja2
soapfish/testutil/: __init__.py  echo_service.py  framework.py  generated_symbols.py  simpletype_testcase.py
tests/: __init__.py  code_generation.py  code_generation_test.py  django_test.py  flask_test.py  ops.py  ops_test.py  py2xsd_test.py  requirements.txt  soap11_test.py  soap12_test.py  soap2_test.py  soap_dispatcher_test.py  soap_error_test.py  soap_test.py  soap_test2.py  soapfish_response_test.py  utils_test.py  wsdl_code_generation_test.py  wsgi_soap_application_test.py  xsd.py  xsd_code_generation_test.py  xsd_complex_type_choice_test.py  xsd_date_test.py  xsd_datetime_test.py  xsd_ref_test.py  xsd_test.py  xsdspec_element_test.py  xsdspec_schema_test.py
tests/framework/: django_test.py  flask_test.py
tests/generation/: code_test.py  wsdl_code_test.py  xsd_attrs_code_test.py  xsd_code_test.py
tests/requirements/: lint.txt  test.txt
tests/xsd/: date_test.py  decimal_test.py  schema_test.py  string_test.py  time_test.py  xsd_choice_test.py  xsd_datetime_test.py  xsd_ref_test.py
tests/xsd_types/: xsddate_test.py
(+654 files in other folders)
