[aliases]
test = nosetests --nocapture --with-coverage --cover-package=soapfish

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[egg_info]
tag_build =
tag_date = false
tag_svn_revision = false

[flake8]
exclude = .git
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = soapfish
multi_line_output = 3
not_skip = __init__.py

[metadata]
license-file = LICENSE

[nosetests]
detailed-errors = true
