[metadata]
name = soapfish
version = 0.6.0.dev0
url = http://soapfish.org/
download_url = http://soapfish.org/releases/
author = Damian Powązka
author_email = dpowazka@gmail.com
maintainer = Felix Schwarz
maintainer_email = felix.schwarz@oss.schwarz.eu
description = A SOAP library for Python
long_description = file: README.md, AUTHORS.md, CHANGES.md, TODO.md
long_description_content_type = text/markdown
keywords = soap, wsdl, xsd, xml, schema, web service
obsoletes = soapbox
license = BSD-3-Clause
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Framework :: Django
    Framework :: Flask
    Framework :: Pyramid
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    iso8601>=0.1.12
    jinja2
    lxml
    requests

[options.packages.find]
exclude = examples, tests, tests.*

[options.entry_points]
console_scripts =
    py2wsdl = soapfish.py2wsdl:main
    py2xsd = soapfish.py2xsd:main
    wsdl2py = soapfish.wsdl2py:main
    xsd2py = soapfish.xsd2py:main

[check-manifest]
ignore = .mailmap

[flake8]
doctests = true
exclude = build,dist,venv,.eggs,.git,.tox,__pycache__
hang-closing = false
ignore = B001,B005,E121,E123,E126,E501,E731,FI1,FI9,W504
per-file-ignores = */migrations/*.py:B950
max-complexity = 20
max-doc-length = 119
max-line-length = 119
select = A5,B0,B3,B9,C,D2,D3,D4,E,F,G,I0,Q0,R1,W
inline-quotes = single
multiline-quotes = single
docstring-quotes = double
no-accept-encodings = true

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = soapfish
line_length = 119
multi_line_output = 5
use_parentheses = true

[pycodestyle]
exclude = build,dist,venv,.eggs,.git,.tox,__pycache__
hang-closing = false
ignore = E121,E123,E126,E501,E731,W504
max-doc-length = 119
max-line-length = 119

[pydocstyle]
add-ignore = D1

[tool:pytest]
junit_family = xunit2
